--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "timetable"
 version = "0.1.0"
-description = "Add your description here"
+description = "Time Table for NCN 2025"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
