--- a/.github/workflows/run_on_excel_update.yml
+++ b/.github/workflows/run_on_excel_update.yml
@@ -25,3 +25,11 @@ jobs:
       - name: スクリプト実行
         run: |
           python excel2json.py
+
+      - name: 変更を Git にコミットしてプッシュ
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Auto update by GitHub Actions" || echo "No changes to commit"
+          git push
