--- a/.github/workflows/run_on_excel_update.yml
+++ b/.github/workflows/run_on_excel_update.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - '【2025・04～09月 前期】全学年時間割.xlsx'
 
+permissions:
+  contents: write
+
+  
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -12,6 +16,8 @@ jobs:
     steps:
       - name: チェックアウト
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Python セットアップ
         uses: actions/setup-python@v4
