--- a/.github/workflows/run_on_excel_update.yml
+++ b/.github/workflows/run_on_excel_update.yml
@@ -4,6 +4,12 @@ on:
   push:
     paths:
       - 'schedule.xlsx'
+  workflow_run:
+    workflows: ["Download and Commit SharePoint Excel"] 
+    types:
+      - completed
+    branches:
+      - main
 
 permissions:
   contents: write
