--- a/.github/workflows/download_commit.yml
+++ b/.github/workflows/download_commit.yml
@@ -1,6 +1,8 @@
 name: Download and Commit SharePoint Excel
 
 on:
+  schedule:
+    - cron: '0 * * * *'  # 毎時0分に実行（UTC）
   workflow_dispatch:      # 手動実行も可能
 
 jobs:
