--- a/.github/workflows/run_on_excel_update.yml
+++ b/.github/workflows/run_on_excel_update.yml
@@ -3,8 +3,8 @@ name: Run Python Script on Excel Update
 on:
   push:
     paths:
-      - 'schedule.xlsx'
-
+      - 'schedule_spring.xlsx'
+      - 'schedule_fall.xlsx'
 permissions:
   contents: write
 
