--- a/.github/workflows/run_on_excel_update.yml
+++ b/.github/workflows/run_on_excel_update.yml
@@ -1,31 +1,24 @@
-name: Run Python Script on Excel Update
+name: Run Excel → JSON Conversion
 
 on:
   push:
     paths:
-      - 'schedule_spring.xlsx'
-      - 'schedule_fall.xlsx'
-  workflow_run:
-    workflows: ["Download and Commit SharePoint Excel"] 
-    types:
-      - completed
-    branches:
-      - main
-  workflow_dispatch:      # 手動実行も可能
-  
+      - 'schedule_spring_CURRENT.xlsx'
+      - 'schedule_fall_CURRENT.xlsx'
+      - 'schedule_spring_NEXT.xlsx'
+      - 'schedule_fall_NEXT.xlsx'
+  workflow_dispatch:
+
 permissions:
   contents: write
 
-  
 jobs:
-  run-script:
+  convert-excel:
     runs-on: ubuntu-latest
 
     steps:
       - name: チェックアウト
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Python セットアップ
         uses: actions/setup-python@v4
@@ -34,16 +27,17 @@ jobs:
 
       - name: 依存関係インストール
         run: |
-          pip install -r requirements.txt
+          pip install pandas openpyxl python-dotenv requests azure-identity
 
-      - name: スクリプト実行
+      - name: Excel → JSON 変換
         run: |
           python excel2json.py
 
-      - name: 変更を Git にコミットしてプッシュ
+      - name: docs 配下の変更をコミット
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Auto update by GitHub Actions" || echo "No changes to commit"
+
+          git add docs/
+          git commit -m "Auto update JSON by GitHub Actions" || echo "No changes to commit"
           git push
